2007-11-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/covMcd.R (covMcd): if we have singularity, also say so, even
	if trace is FALSE.

	* R/covMcd.R (singularityMsg): for "on.hyperplane", concatenate
	long coefficient vector.

2007-10-25  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/pulpfiber.Rd:   New data set (p=8 = 4 + 4)
	* data/pulpfiber.tab: from "Robust Multivariate Regression (2004)".

	* tests/lmrob-ex12.R: use versions of predict[.lmrob]()

2007-10-24  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/condroz.Rd: set latin1 encoding (and fix typo)

	* R/lmrob.R (predict.lmrob): define predict() and model.matrix()
	methods, working via "lm" methods.

	* NAMESPACE: export vcov(<lmrob>)

	* man/summary.lmrob.Rd: some docu of new methods


2007-08-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/adjoutlyingness.R (adjOutlyingness): small improvements,
	  getting rid of loops; fix an obvious typo (in original code).
	  Leave away the Inf and NaN that from  abs(Y[] - m) / ( tup | tlo)

2007-07-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Author): add Tobias

	* src/rmc.c (h_kern): revert to absolute test; many more experiments
	* tests/mc-etc.R (x3): a smallish "extreme" case of "non-convergence"

2007-07-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/mc-etc.R: new testing of mc() and related

	* src/rmc.c (mc_C_d): changed work[] and weight[] to 0-indexing;
		this is hopefully the last bug ...

	* R/adjbox.R (adjbox.formula): use adjbox(), not boxplot()!
	* man/adjboxStats.Rd: added

2007-07-20  Tobias Verbeke  <tobias.verbeke@businessdecision.com>

	* R/adjbox.R: Skewness-adjusted boxplot ported from Matlab LibRA
	* man/adjbox.Rd:

	* data/los.rda, man/los.Rd:
	* data/condroz.rda, man/condroz.Rd: two dataset related to medcouple

2007-07-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/adjoutlyingness.R: new (also from the Antwerpen MC collection)
