@@ -1,5 +1,5 @@
 
-R version 2.6.0 Patched (2007-10-19 r43219)
+R version 2.6.1 Patched (2007-12-12 r43668)
 Copyright (C) 2007 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -267,7 +267,7 @@ x             5.5039     0.6447   8.537   <2e-16 ***
 ---
 Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
 Robustness weights w.r * w.x: 
- 48 weights are ~= 1; the remaining 3 ones:
+ 48 weights are ~= 1. The remaining 3 ones are
     42     44     51 
 0.5127 0.7846 0.7388 
 
@@ -301,7 +301,8 @@ x             5.5461     0.6259   8.861   <2e-16 ***
 ---
 Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
 Robustness weights w.r * w.x: 
- All 51 weights are ~= 1;
+ All 51 weights are ~= 1.
+
 Number of observations: 51 
 Fitted by method ‘Mqle’  (in 1 iterations)
 
@@ -334,7 +335,8 @@ x             5.5464     0.6259   8.861   <2e-16 ***
 ---
 Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
 Robustness weights w.r * w.x: 
- All 51 weights are ~= 1;
+ All 51 weights are ~= 1.
+
 Number of observations: 51 
 Fitted by method ‘Mqle’  (in 1 iterations)
 
@@ -362,5 +364,5 @@ test.acc
 +                     rg3.15  [no.comp], tol = 1e-13))
 > 
 > cat('Time elapsed: ', proc.time(),'\n') # for ``statistical reasons''
-Time elapsed:  1.192 0.04 1.352 0 0 
+Time elapsed:  0.754 0.035 0.928 0 0 
 > 
