@@ -1,3 +1,12 @@
+2007-12-13  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* man/summarizeRobWeights.Rd: add toy example
+
+	* R/lmrob.R (summarizeRobWeights): cosmetic change; notably
+	finishing line when weights were practically 0/1).
+
+	* tests/MCD-specials.Rout.save {adapt from change of 11-07}
+
 2007-11-07  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/covMcd.R (covMcd): if we have singularity, also say so, even
